--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 (2015-11-01) Make integer signedness more consistent
 (2015-11-01) Require .reg to include bank number
+(2015-11-01) Add macros for magic constants
