--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 (2015-11-01) Make integer signedness more consistent
 (2015-11-01) Add macros for magic constants
 (2015-11-07) Fix line numbering (I think calls throw it off)
+(2015-11-13) Implement macro procedures (without arguments)
